Finished setup of stripe, paymentservice, paymentcontroller, jpaconfig, stripeconfig and many others for the frontend page new features